# pari-jupyter

./: .cruft.json  .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  gp-mode.json  pyproject.toml  setup.py
.github/workflows/: dist.yml  doc.yml  test.yml
PARIKernel/: __init__.py  __main__.py  io.pxd  io.pyx  kernel.pyx  paridecl.pxd  paripriv.pxd  svg.pyx
doc/: Makefile  conf.py  environment.yml  examples.rst  index.rst
doc/examples/: init.md
gp-mode/: gp.js  main.js
spec/: kernel.js  kernel.json
test/: environment.yml  test_pari_jupyter_kernel.py
tools/: generatekwlist.py
